# rameau

./: Cargo.toml  README.md
assets/: README.md  heist.midi
crates/rameau_chords/: Cargo.toml  README.md
crates/rameau_chords/src/: lib.rs
crates/rameau_clip/: Cargo.toml  README.md
crates/rameau_clip/src/: clip.rs  lib.rs
crates/rameau_kira/: Cargo.toml  README.md
crates/rameau_kira/src/: backend.rs  lib.rs
crates/rameau_midi/: Cargo.toml  README.md
crates/rameau_midi/src/: error.rs  event.rs  lib.rs  program.rs  smf.rs
crates/rameau_midi/tests/: heist.rs
crates/rameau_playback/: Cargo.toml  README.md
crates/rameau_playback/src/: device.rs  engine.rs  lib.rs
crates/rameau_smf/: Cargo.toml
crates/rameau_smf/src/: lib.rs
crates/rameau_software/: Cargo.toml  README.md
crates/rameau_software/src/: backend.rs  envelope.rs  lib.rs  voice.rs
crates/rameau_soundfont/: Cargo.toml  README.md
crates/rameau_soundfont/src/: file.rs  generator.rs  lib.rs  load.rs  soundfont.rs
crates/rameau_soundfont/tests/: load.rs
crates/rameau_synthesizer/: Cargo.toml  README.md
crates/rameau_synthesizer/examples/: interactive.rs  midi_play.rs  render_score.rs
crates/rameau_synthesizer/src/: envelope.rs  gens.rs  lib.rs  synth.rs  voice.rs
crates/rameau_theory/: Cargo.toml  README.md
crates/rameau_theory/src/: lib.rs
crates/rameau_tinyaudio/: Cargo.toml  README.md
crates/rameau_tinyaudio/src/: backend.rs  lib.rs
crates/rameau_types/: Cargo.toml  README.md
crates/rameau_types/src/: lib.rs
crates/rameau_wav/: Cargo.toml  README.md
crates/rameau_wav/src/: lib.rs  write.rs
src/: lib.rs
