[package]
name = "rameau_clip"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Format-independent audio sample container (AudioClip / Clip)"

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
