[package]
name = "rameau_kira"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Real-time AudioPlayback backend on kira"

[dependencies]
kira = "0.12"
rameau_clip = { path = "../rameau_clip", version = "0.1.0" }
rameau_playback = { path = "../rameau_playback", version = "0.1.0" }
