[package]
name = "rameau_playback"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Backend-independent device and sample-engine traits"

[dependencies]
rameau_clip = { path = "../rameau_clip", version = "0.1.0" }
