[package]
name = "rameau_software"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pure-software mixing backend for offline rendering"

[dependencies]
rameau_clip = { path = "../rameau_clip", version = "0.1.0" }
rameau_playback = { path = "../rameau_playback", version = "0.1.0" }
