[package]
name = "rameau_soundfont"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
lewton = "0.10.2"
rameau_clip = { path = "../rameau_clip", version = "0.1.0" }
rameau_playback = { path = "../rameau_playback", version = "0.1.0" }
riff = "2.0.0"
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "rameau_clip/serde"]
