[package]
name = "rameau_soundfont"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SoundFont model and .sf2/.sf3 loader"

[dependencies]
lewton = "0.10.2"
rameau_clip = { path = "../rameau_clip", version = "0.1.0" }
rameau_playback = { path = "../rameau_playback", version = "0.1.0" }
riff = "2.0.0"
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "rameau_clip/serde"]
