[package]
name = "rameau_synthesizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SoundFont synthesizer driving a playback backend"

[dependencies]
rameau_clip = { path = "../rameau_clip", version = "0.1.0" }
rameau_midi = { path = "../rameau_midi", version = "0.1.0" }
rameau_playback = { path = "../rameau_playback", version = "0.1.0" }
rameau_soundfont = { path = "../rameau_soundfont", version = "0.1.0" }

[dev-dependencies]
rameau_kira = { path = "../rameau_kira", version = "0.1.0" }
rameau_software = { path = "../rameau_software", version = "0.1.0" }
rameau_tinyaudio = { path = "../rameau_tinyaudio", version = "0.1.0" }
rameau_wav = { path = "../rameau_wav", version = "0.1.0" }

[[example]]
name = "interactive"
path = "examples/interactive.rs"

[[example]]
name = "render_score"
path = "examples/render_score.rs"

[[example]]
name = "midi_play"
path = "examples/midi_play.rs"
