[package]
name = "rameau_tinyaudio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Playback device backend on tinyaudio"

[dependencies]
rameau_playback = { path = "../rameau_playback", version = "0.1.0" }
tinyaudio = "2"
